not setting ROS_DOMAIN_ID

--- a/negative-obstacle-detection/Dockerfile
+++ b/negative-obstacle-detection/Dockerfile
@@ -298,7 +298,7 @@ RUN cd /home/dcist/dcist_ws \
     
 RUN /bin/sh -c 'echo "source /home/dcist/dcist_ws/src/ws_livox/install/setup.bash" >> ~/.bashrc'
 RUN /bin/sh -c 'echo "source /home/dcist/dcist_ws/install/setup.bash" >> ~/.bashrc'
-RUN /bin/sh -c 'echo "export ROS_DOMAIN_ID=5" >> ~/.bashrc' 
+# RUN /bin/sh -c 'echo "export ROS_DOMAIN_ID=5" >> ~/.bashrc' 
 # RUN /bin/sh -c 'echo "export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp" >> ~/.bashrc' 
 # RUN /bin/sh -c 'echo "export RMW_IMPLEMENTATION=rmw_fastrtps_cpp" >> ~/.bashrc' 
 
