--- a/.gitmodules
+++ b/.gitmodules
@@ -36,3 +36,6 @@
 [submodule "ws/src/ros2_control"]
 	path = ws/src/ros2_control
 	url = https://github.com/ros-controls/ros2_control.git
+[submodule "ws/src/negative_obstacle_detection"]
+	path = ws/src/negative_obstacle_detection
+	url = git@github.com:frankgon1627/negative_obstacle_detection.git
