--- a/risk-mpc/Dockerfile
+++ b/risk-mpc/Dockerfile
@@ -77,7 +77,7 @@ RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
   locale-gen
 ENV LC_ALL=en_US.UTF-8
 ENV LANG=en_US.UTF-8
-ENV LANGUAGE=n_US:en
+ENV LANGUAGE=en_US:en
 
 # enable all nvidia capabilities
 ENV NVIDIA_DRIVER_CAPABILITIES=all
