adding zed-ros2-wrapper as submodule

--- a/risk-mpc/Dockerfile
+++ b/risk-mpc/Dockerfile
@@ -265,16 +265,16 @@ RUN cd /home/dcist/dcist_ws/src \
 
 # download and install the ZED SDK
 RUN cd /home/dcist \
-  && wget -O zed_sdk.run https://download.stereolabs.com/zedsdk/5.0/cu12/ubuntu24 \
+  && wget -O zed_sdk.run https://download.stereolabs.com/zedsdk/4.2/cu12/ubuntu24?_gl=1*1x6bx14*_gcl_au*MTUzMjE4OTEyOS4xNzQwMTczNjA4 \
   && chmod +x zed_sdk.run \
   && ./zed_sdk.run -- silent skip_cuda skip_od_module\
   && rm zed_sdk.run
 
 # install the ZED ROS2 wrapper
-RUN cd /home/dcist/dcist_ws/src/ \
-  && git clone --recursive https://github.com/stereolabs/zed-ros2-wrapper.git \
-  && cd zed-ros2-wrapper \
-  && git checkout jazzy
+# RUN cd /home/dcist/dcist_ws/src/ \
+#   && git clone --recursive https://github.com/stereolabs/zed-ros2-wrapper.git \
+#   && cd zed-ros2-wrapper \
+#   && git checkout jazzy
 
 # install and build casadi from source
 RUN cd /home/dcist \
