--- a/risk-mpc/Dockerfile
+++ b/risk-mpc/Dockerfile
@@ -148,10 +148,12 @@ RUN cd /home/dcist/dcist_ws \
     rosdep install --from-paths src --ignore-src --rosdistro=jazzy -y && \
     colcon build --symlink-install --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_LIBRARY_PATH=/usr/local/cuda/lib64/stubs -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"'
 
+# Configure .bashrc
+RUN echo 'export PS1="\[$(tput setaf 2; tput bold)\]\u\[$(tput setaf 7)\]@\[$(tput setaf 3)\]\h\[$(tput setaf 7)\]:\[$(tput setaf 4)\]\W\[$(tput setaf 7)\]$ \[$(tput sgr0)\]"' >> ~/.bashrc
+# Fix folder permissions
+RUN /bin/sh -c 'echo sudo chown $USER:$USER ~/dcist_ws >> ~/.bashrc'
+RUN /bin/sh -c 'echo sudo chown $USER:$USER ~/data >> ~/.bashrc'
 # Source setup files
 RUN /bin/sh -c 'echo "source /opt/ros/jazzy/setup.bash" >> ~/.bashrc'
 RUN /bin/sh -c 'echo "source /etc/clearpath/setup.bash" >> ~/.bashrc'
 RUN /bin/sh -c 'echo "source ~/dcist_ws/install/setup.bash" >> ~/.bashrc'
-# Fix folder permissions
-RUN /bin/sh -c 'echo sudo chown $USER:$USER ~/dcist_ws >> ~/.bashrc'
-RUN /bin/sh -c 'echo sudo chown $USER:$USER ~/data >> ~/.bashrc'
