updating auto topic

--- a/clearpath/platform/config/twist_mux.yaml
+++ b/clearpath/platform/config/twist_mux.yaml
@@ -12,7 +12,7 @@ j100_0000:
           timeout: 0.5
           priority: 8
         rc:
-          topic: 'rc_teleop/cmd_vel'
+          topic: 'autonomous/cmd_vel'
           timeout: 0.5
           priority: 12
         external:
